# LLM_API_Search

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mcp_server.py  pyproject.toml  usage_middleware.py
.github/workflows/: ci.yml  deploy.yml  update-models.yml
docs/superpowers/plans/: 2026-03-14-multi-model-type-support.md
docs/superpowers/specs/: 2026-03-14-multi-model-type-support-design.md  2026-03-20-rate-limits-design.md
llm_api_search/: __init__.py  catalog.py  data_version.py  discovery.py  selector.py
llm_api_search/providers/: __init__.py  anthropic.py  base.py  deepseek.py  google.py  inception.py  kimi.py  minimax.py  mistral.py  openai.py  qwen.py  zai.py
llm_api_search/providers/rate_limits/: __init__.py  anthropic.py  deepseek.py  google.py  inception.py  kimi.py  minimax.py  mistral.py  openai.py  qwen.py  zai.py
llm_api_search/providers/thinking/: __init__.py  anthropic.py  deepseek.py  google.py  inception.py  kimi.py  minimax.py  mistral.py  openai.py  qwen.py  zai.py
mcp_servers/: __init__.py  llm_api_search.py
nginx/: llm-mcp.cora-branch.com.conf
scripts/: update_models.py
tests/: test_catalog.py  test_deepseek_discovery.py  test_discovery.py  test_minimax.py  test_qwen_discovery.py  test_rate_limits.py  test_thinking.py  test_update_models_ordering.py
